# topo_rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs
src/config/: config.yaml
src/crs/: crs_utils.rs  mod.rs  utm_conversion.rs
src/geofile/: feature.rs  gdal_geofile.rs  geojson.rs  geopackage.rs  linestring_file.rs  mod.rs
src/geograph/: geo_feature_graph.rs  mod.rs  primitives.rs  utils.rs
src/osm/: conversion.rs  download.rs  mod.rs
src/topo/: georef_lines.rs  mod.rs  preprocessing.rs  topo.rs
