
[package]
name = "topo_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
geo = "0.23.1"
geohash = "0.13.0"
geojson = "0.24.0"
log = "0.4.17"
osm-xml = "0.6.2"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_yaml = "0.9.17"
uuid = "1.3.0"
