
[package]
name = "topo_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
approx = "0.5.1"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
gdal = "0.14.0"
gdal-sys = "0.8.0"
generic-tests = "0.1.2"
geo = "0.23.1"
geohash = "0.13.0"
geojson = "0.24.0"
indicatif = {version = "0.17.3", features = ["rayon"]}
kdtree = "0.7.0"
libc = "0.2.140"
log = "0.4.17"
osm-xml = "0.6.2"
petgraph = "0.6.3"
proj = {version = "0.27.0"}
proj-sys = "0.23.1"
rayon = "1.6.1"
reqwest = { version = "0.11.14", features = ["blocking"] }  
rstar = "0.10.0"
rstest = "0.16.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_yaml = "0.9.17"
testdir = "0.7.3"
wkb = "0.7.1"
